c2hs (0.16.0-2) UNRELEASED; urgency=low

  * debian/copyright: Specify revision of Format-Specification:.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Sun, 14 Feb 2010 09:33:28 -0200

c2hs (0.16.0-1) unstable; urgency=low

  [ Erik de Castro Lopo ]
  * New upstream.
  * debian/control:
    - Maintainer is now Debian Haskell Group with two uploaders.
    - Make Vcs-* fields point to darcs.
    - Homepage now points to Hackage.
    - Standards version 3.8.3.
    - Move Build-Depends-Indep entries to Build-Depends.
    - Update Build-Depends.
    - Use haskell-descripts Depends/Recommends/Suggests replacements.
  * debian/watch: Point to Hackage.
  * debian/rules: Switch to haskell-devscripts for build.
  * debian/c2hs.install: Changes required due to change in build.
  * debian/patches/ : Convert dpatch patches to quilt.

  [ Marco Túlio Gontijo e Silva ]
  * debian/control: Change Priority: to extra.
  * debian/watch: Use format that works for --download-current-version.
  * debian/watch: Add .tar.gz to downloaded filename.
  * debian/watch: Include package name in downloaded .tar.gz.
  * debian/control: Change Section: to haskell.
  * debian/watch: Remove spaces, since they're not allowed by uscan.
  * debian/control: Use Vcs-Browser: field.
  * debian/control: Bump Standards-Version: to 3.8.4, no changes needed.
  * Use 3.0 (quilt) source format.
  * Include patch to work with ghc6-6.12.
  * debian/copyright: Use DEP-5 format.
  * debian/control: Bump Build-Depends: on haskell-devscripts to 0.7 and
    remove versioned Build-Depends on ghc6.
  * debian/control: Correct spacing of Homepage: field.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Fri, 12 Feb 2010 22:34:33 -0200

c2hs (0.15.1-4) unstable; urgency=low

  * debian/control:
    - Add doc-base to the Suggests of c2hs-doc.
    - Let the Vcs-* fields point the trunk branch.

 -- Arjan Oosting <arjan@debian.org>  Sun, 16 Mar 2008 23:40:39 +0100

c2hs (0.15.1-3) unstable; urgency=low
