@@ -1,3 +1,11 @@
+# Description: Patch to work with ghc6-6.12
+#  This patch was based on a patch by Duncan Coutts for the internal c2hs of
+#  gtk2hs.  It's available at
+#  http://sourceforge.net/mailarchive/forum.php?thread_name=1260471581.13548.13986.camel%40localhost&forum_name=gtk2hs-devel .
+# Bug-Debian: 569411
+# Forwarded: http://haskell.org/pipermail/c2hs/2010-February/000993.html
+# Author: Marco Túlio Gontijo e Silva <marcot@debian.org>
+# Last-Update: 2010-02-12
 Index: c2hs-0.16.0/src/C2HS/C/Info.hs
 ===================================================================
 --- c2hs-0.16.0.orig/src/C2HS/C/Info.hs	2010-02-12 16:04:15.000000000 -0200
