@@ -1,6 +1,7 @@
 c2hs (0.16.0-2) UNRELEASED; urgency=low
 
   * debian/copyright: Specify revision of Format-Specification:.
+  * debian/patches/04_ghc6-6.12.diff: Use DEP-3 format.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Sun, 14 Feb 2010 09:33:28 -0200
 
